--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             </div>
             </div>
             <div class="col-md-5">
-                <label>select size:</label>
+                <label>select size:</label><br>
                 <select class="custom-select custom-select-md mb-3" id="size" required>
-                    <option value="regular">Regular</option>
-                    <option value="medium">Medium</option>
-                    <option value="large">Large</option>
+                    <option value="small">Small @Sh. 300</option>
+                    <option value="medium">Medium @Sh. 600</option>
+                    <option value="large">Large @Sh. 1200</option>
                 </select>
                 <form class="col-sm-5 offset-sm-3">
 
                 <label>select crust:</label>
-                <select class="custom-select custom-select-md mb-3 flavour" required>
+                <select class="custom-select custom-select-md mb-3" id="crust" required>
                     <option value="vegtikka">Veg Tikka</option>
                     <option value="chickentikka">Chicken Tikka</option>
                     <option value="periperi">Peri-Peri Chicken</option>
@@ -62,18 +62,13 @@
                 </select>
                 <label for="number">number of pizza's</label>
                 <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
-
-
-
-
-
-
-
-
+                <br>
+                    <button type="submit" class="btn btn-light checkout" id="checkout">CHECKOUT</button>
             </div>
         </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="js/index.js"></script>
     </body>
-    <script> src="js/index.js" </script>
 </html>
 
 
