--- a/index.html
+++ b/index.html
@@ -63,7 +63,16 @@
                 <label for="number">number of pizza's</label>
                 <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
                 <br>
-                    <button type="submit" class="btn btn-light checkout" id="checkout">CHECKOUT</button>
+                <a href="#summary">
+                    <button type="submit" class="btn btn-light checkout" id="checkout">
+                        Checkout
+                    </button>
+                </a>
+                <div class="order-summary" id="sum-order">
+                    <h5 class="text-center" id="summary">Order Summary</h5>
+                    <h2 class="text-center summary"></h2>
+                    <ol id="list" class="text-center sum">
+                    </ol>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
