--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     </head>
     <body class="top">
         <div id="enn">
-                <h1>ENNYDIN</h1>
-                <h1>PIZZERIA</h1>
+                <h1>ENNYDIN PIZZERIA</h1>
         </div>
         <p><i><strong>the tastiest pizza in town</strong></i></p>
         <div class="row">
@@ -34,7 +33,6 @@
                     <option value="large">Large @Sh. 1200</option>
                 </select>
                 <form class="col-sm-5 offset-sm-3">
-
                 <label>select crust:</label>
                 <select class="custom-select custom-select-md mb-3" id="crust" required>
                     <option value="vegtikka">Veg Tikka</option>
@@ -46,8 +44,6 @@
                     <option value="mushroom">Chicken and Mushroom</option>
                     <option value="feast">Veg Feast</option>
                 </select>
-               
-           
                 <label>select toppings</label>
                 <select class="custom-select custom-select-md mb-3" id="toppings" required>
                     <option value="pepperoni">Xtra Pepperoni @Sh. 100</option>
@@ -73,7 +69,11 @@
                     <h2 class="text-center summary"></h2>
                     <ol id="list" class="text-center sum">
                     </ol>
-            </div>
+                </div>
+                <div class="d-block mx-auto text-center">
+                    <button class='deliver'>Make Delivery</button>
+                   <!-- <button class='delivernot'>Pick Up</button>-->
+                </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="js/index.js"></script>
