--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-8<html>
+<html>
     <head>
         <title>ENDN PIZZERIA</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -49,9 +49,9 @@
                 <label for="crust">Choose Crust:</label>
                 <select class="custom-select custom-select-md mb-3" id="crust" required>
                     <option selected value="0">select crust here</option>
-                    <option value="thin">Thin Crust @ Ksh. 100</option>
-                    <option value="thick">Thick Crust @ Ksh. 150</option>
-                    <option value="flatbread">FlatBread Crust @ sh. 180</option>
+                    <option value="thin">Thin Crust @ Sh. 100</option>
+                    <option value="thick">Thick Crust @ Sh. 150</option>
+                    <option value="flatbread">FlatBread Crust @ Sh. 180</option>
                 </select>
                 <label>select toppings</label>
                 <select class="custom-select custom-select-md mb-3" id="toppings" required>
@@ -62,9 +62,9 @@
                     <option value="ham">Xtra Ham @Sh. 100</option>
                     <option value="cheese">Xtra Cheese @Sh. 100</option>
                     <option value=""></option>
-                    <option value="onions">Xtra Onions @ sh. 80</option>
-                    <option value="chilli">Xtra Chilli @ sh. 50</option>
-                    <option value="mushroom">Xtra Mushroom @ sh. 80</option>
+                    <option value="onions">Xtra Onions @ Sh. 80</option>
+                    <option value="chilli">Xtra Chilli @ Sh. 50</option>
+                    <option value="mushroom">Xtra Mushroom @ Sh. 80</option>
                 </select>
                 <label for="number">number of pizza's</label>
                 <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
@@ -76,7 +76,7 @@
                 <div class="order-summary" id="sum-order">
                     <h5 class="text-center" id="summary">YOUR ORDER</h5>
                     <h2 class="text-center summary"></h2>
-                    <ol id="list" class="text-center sum">
+                    <ol id="list" class="text-center sum" class="bg-success">
                     </ol>
                 </div>
                 <div id="summary"></div>
