--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
                     <option value="mushroom">Chicken and Mushroom</option>
                     <option value="feast">Veg Feast</option>
                 </select>
-                
+                <label for="crust">Choose Crust:</label>
+                <select class="custom-select custom-select-md mb-3" id="crust" required>
+                    <option selected value="0">select crust here</option>
+                    <option value="thin">Thin Crust @ Sh. 100</option>
+                    <option value="thick">Thick Crust @ Sh. 150</option>
+                    <option value="flatbread">FlatBread Crust @ Sh. 180</option>
+                </select>
                 <label>select toppings</label>
                 <select class="custom-select custom-select-md mb-3" id="toppings" required>
                     <option selected value="0">select toppings</option>
