--- a/index.html
+++ b/index.html
@@ -68,15 +68,12 @@
                 </select>
                 <label for="number">number of pizza's</label>
                 <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
-                <br>
-                    <button type="submit" class="btn btn-light checkout" id="checkout">
-                        CHECKOUT
-                    </button>
+                    <button type="submit" class="btn btn-light checkout" id="checkout">CHECKOUT </button>
                 </a>
                 <div class="order-summary" id="sum-order">
                     <h5 class="text-center" id="summary">YOUR ORDER</h5>
                     <h2 class="text-center summary"></h2>
-                    <ol id="list" class="text-center sum" class="bg-success">
+                   <span class="btn btn-light"><ol id="list" class="text-center sum" class="bg-success"></ol></span> 
                     </ol>
                 </div>
                 <div id="summary"></div>
