--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div id="summary"></div>
                 <div class="d-block mx-auto text-center">
-                    <button class='deliver'>Make Delivery</button>
+                    <button class="deliver">Make Delivery</button>
                 </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
