--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div id="enn">
                 <h1>ENNYDIN PIZZERIA</h1>
         </div>
-        <p><i><strong>the tastiest pizza in town</strong></i></p>
+        <p><i><strong> for the tastiest pizza in town</strong></i></p>
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-5"> 
@@ -70,13 +70,10 @@
                 <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
                     <button type="submit" class="btn btn-light checkout" id="checkout">CHECKOUT </button>
                 </a>
-                <div class="order-summary" id="sum-order">
                     <h5 class="text-center" id="summary">YOUR ORDER</h5>
                     <h2 class="text-center summary"></h2>
                    <span class="btn btn-light"><ol id="list" class="text-center sum" class="bg-success"></ol></span> 
                     </ol>
-                </div>
-                <div id="summary"></div>
                 <div class="d-block mx-auto text-center">
                     <button class="deliver">Make Delivery</button>
                 </div>
